# snp-dists

./: .clang-format  .gitignore  .travis.yml  AUTHORS  Dockerfile  Makefile  README.md  configure  configure.ac  environment.yml  main.c
.github/workflows/: CI.yml  ci.yml
paper/: paper.bib  paper.md
src/: Makefile  Makefile.am  main.c  snpdists.c  snpdists.h
test/: ambig-a.res  ambig.aln  ambig.res  bad.aln  good-c-m.res  good-c.res  good-qcbL.res  good_phylip.res  gzip.res  lowercase-k.res  lowercase.aln  singleton.aln  singleton.res  test.sh
tests/: check-snpdists.c  check-snpdists.h  run-all-tests.c
tests/data/: good.aln
